[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'specimen'
authors = [
  { name="Carolin Brune"},
]
description = "SPECIMEN: A package for strain-specific metabolic modelling."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
keywords = ['Systems Biology', 'GEM', 'Metabolic Modelling', 'Python Package', 'Pipeline']

classifiers = [
    'Operating System :: MacOS',
    "Operating System :: Unix", # @TODO make it OS independant  - testing remains
    # 'Operating System :: OS Independent'
    'Programming Language :: Python',
    # Topic :: Software Development :: Libraries :: Python Modules
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
]

dependencies = [
    'biopython>=1.83',
    'bofdat>=0.1.7', # but does not work like this!!! @TODO how to handle this?
    'click>=8.1.7',
    'cobra>=0.27.0',
    'matplotlib >= 3.8.2',
    #'MCC@git+https://github.com/Biomathsys/MassChargeCuration', # @TODO test if it works
    'multiprocess>=0.70.16',
    'memote>=0.14.0',
    'numpy>=1.26.3',
    'pandas>=1.5.3',
    'python-libsbml>=5.20.2',
    'pyyaml>=6.0.1',
    # 'refinegems>=2.0',
    'requests>=2.32.2',
    'seaborn>=0.13.2',
    # 'sboannotator' # @TODO wait for future update
    'tqdm>=4.66.1',
    'z3-solver>=4.12.5'
]
# @TODO
# additional missing tools:
#    EntrezDirect
#    DIAMOND

# @TODO:
[project.urls]
homepage = 'https://github.com/draeger-lab/SPECIMEN'
# documentation = 

[project.scripts]
specimen = "specimen.cmd_access:cli"

# include data
[tool.setuptools.packages.find]
where = ['src']
[tool.setuptools.package-data]
"specimen.data.config" = ['*.yaml']
