[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'specimen'
authors = [
  { name="Carolin Brune"},
  { name="Gwendolyn O. Döbel"},
]
maintainers = [
  {name = "Nina Roßbach"}
]

description = "SPECIMEN: A collection of workflows for strain-specific metabolic modelling."
readme = "README.md"
version = "0.0.dev1"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
keywords = ['Systems Biology', 'GEM', 'Metabolic Modelling', 'Python Package', 'Pipeline']

classifiers = [
    'Operating System :: MacOS',
    "Operating System :: Unix", # @TODO make it OS independant  - testing remains
    # 'Operating System :: OS Independent'
    'Programming Language :: Python',
    # Topic :: Software Development :: Libraries :: Python Modules
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)'
]

dependencies = [
    # 'refinegems>=2.0', # has all other needed dependancies
    "refinegems@git+https://github.com/draeger-lab/refinegems@dev-2",
]
# @TODO
# additional missing tools:
#    EntrezDirect
#    DIAMOND
[project.optional-dependencies]
# developer/docs installation dependancies
docs = ["accessible-pygments",
       "sphinx", 
       "nbsphinx",
       "sphinx_rtd_theme",
       "pandoc",
       "ipython",
       "sphinxcontrib-bibtex",
       "sphinx_copybutton",
       "pip-tools"]

[project.urls]
repository = 'https://github.com/draeger-lab/SPECIMEN'
documentation = 'https://specimen.readthedocs.io/en/latest/'
# homepage = 

[project.scripts]
specimen = "specimen.cmd_access:cli"

# include data
[tool.setuptools.packages.find]
where = ['src']
[tool.setuptools.package-data]
"specimen.data.config" = ['*.yaml','*.yml']
